# BIRD-Platinum

./: .gitignore  README.md
baselines/ArcticTraining/: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  STYLE_GUIDE.md  arctic_training_cli.py  pyproject.toml
baselines/ArcticTraining/.github/: CODEOWNERS  repo_meta.yaml
baselines/ArcticTraining/.github/workflows/: docs.yaml  formatting.yaml  unit_tests.yaml
baselines/ArcticTraining/arctic_training/: __init__.py  debug.py  entrypoint.py  exceptions.py  logging.py  metrics.py  monkey_patches.py  registry.py  testing_utils.py  utils.py
baselines/ArcticTraining/arctic_training/callback/: callback.py  logging.py  mixin.py
baselines/ArcticTraining/arctic_training/checkpoint/: ds_engine.py  engine.py  hf_engine.py
baselines/ArcticTraining/arctic_training/config/: base.py  checkpoint.py  data.py  enums.py  logger.py  model.py  optimizer.py  scheduler.py  tokenizer.py  trainer.py  utils.py  wandb.py
baselines/ArcticTraining/arctic_training/data/: dpo_factory.py  factory.py  hf_instruct_source.py  hf_source.py  sft_factory.py  source.py  utils.py
baselines/ArcticTraining/arctic_training/model/: factory.py  hf_factory.py  liger_factory.py  tiled_compute.py
baselines/ArcticTraining/arctic_training/optimizer/: adam_factory.py  factory.py
baselines/ArcticTraining/arctic_training/scheduler/: factory.py  hf_factory.py  wsd_factory.py
baselines/ArcticTraining/arctic_training/synth/: README.md  __init__.py  base_caller.py  callers.py  cli.py  openai_callers.py  test_cortex_caller.py  test_multi_replica_vllm_caller.py  test_openai_callers.py  test_vllm_caller.py  utils.py  vllm_callers.py  vllm_utils.py
baselines/ArcticTraining/arctic_training/tokenizer/: factory.py  hf_factory.py
baselines/ArcticTraining/arctic_training/trainer/: dpo_trainer.py  flops_counter.py  sft_trainer.py  trainer.py  utils.py
baselines/ArcticTraining/docs/: Makefile  callbacks.rst  checkpoint.rst  conf.py  config.rst  data.rst  index.rst  install.rst  model.rst  optimizer.rst  quick-start.rst  scheduler.rst  synth.rst  tokenizer.rst  trainer.rst  usage.rst
baselines/ArcticTraining/projects/arctic_embed/: README.md  pyproject.toml
baselines/ArcticTraining/projects/arctic_lstm_speculator/: README.md  llama3.1-70b.yaml  llama3.1-8b.yaml  llama3.3-70b.yaml  multigpu_runner.py  oss-120b.yaml  oss-20b.yaml  qwen2.5-32b.yaml  train.py
baselines/ArcticTraining/projects/arctic_text2sql_r1/: README.md  extract_results.py  extracted_results.json  modelcard.md
baselines/ArcticTraining/projects/excot_dpo/: README.md  dpo-llama-8b.yaml  environment.yaml  requirements.txt  sft-llama-8b.yaml
baselines/ArcticTraining/projects/mlp_speculator/: llama-8b.yaml  train.py
baselines/ArcticTraining/projects/moba_attention/: moba-swiftkv-llama-8b.yaml  train.py
baselines/ArcticTraining/projects/sequence-parallelism/: README.md  USAGE.md  run-h100-sp1-llama-8b-baseline.yml  run-h100-sp1-llama-8b.yml  run-h100-sp1-qwen3-32b.yml  run-h100-sp16-llama-70b.yml  run-h100-sp16-llama-8b.yml  run-h100-sp16-qwen3-32b.yml  run-h100-sp32-llama-70b.yml  run-h100-sp32-llama-8b-baseline.yml  run-h100-sp32-llama-8b.yml  (+15 more)
baselines/ArcticTraining/scripts/: download_data.py  install_deps.py  upgrade_user_code.py
baselines/ArcticTraining/tests/: conftest.py  helpers.py  pytest.ini  test_registry.py  utils.py
(+264 files in other folders)
